fixed image position on smaller devices

--- a/index.css
+++ b/index.css
@@ -44,6 +44,7 @@
 }
 .me img{
     height: 100%;
+    width: 100%;
     object-fit: contain;
     display: block;
     text-align: center;
